--- a/server/package.json
+++ b/server/package.json
@@ -7,11 +7,17 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "axios": "^1.6.5",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.2",
     "express": "^4.18.2",
+    "joi": "^17.12.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.0",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.9.8",
+    "otp-generator": "^4.0.1",
     "twilio": "^5.0.0-rc.1"
   },
   "author": "",
