--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "react": "18.2.0",
     "react-native": "0.71.14",
     "react-native-animatable": "^1.3.3",
+    "react-native-elements": "^3.4.3",
     "react-native-heroicons": "^3.2.0",
     "react-native-maps": "1.3.2",
     "react-native-maps-directions": "^1.9.0",
