--- a/client/package.json
+++ b/client/package.json
@@ -13,24 +13,24 @@
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "@reduxjs/toolkit": "^1.9.3",
-    "expo": "~48.0.9",
-    "expo-location": "~15.1.1",
-    "expo-status-bar": "~1.4.4",
+    "expo": "^49.0.22",
+    "expo-location": "~16.1.0",
+    "expo-status-bar": "~1.6.0",
     "nativewind": "^2.0.11",
     "postcss": "^8.4.23",
     "react": "18.2.0",
-    "react-native": "0.71.14",
+    "react-native": "0.72.6",
     "react-native-animatable": "^1.3.3",
     "react-native-elements": "^3.4.3",
     "react-native-heroicons": "^3.2.0",
-    "react-native-maps": "1.3.2",
+    "react-native-maps": "1.7.1",
     "react-native-maps-directions": "^1.9.0",
     "react-native-progress": "^5.0.0",
-    "react-native-safe-area-context": "4.5.0",
-    "react-native-screens": "~3.20.0",
-    "react-native-svg": "13.4.0",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
+    "react-native-svg": "13.9.0",
     "react-native-vector-icons": "^9.2.0",
-    "react-native-web": "~0.18.11",
+    "react-native-web": "~0.19.6",
     "react-redux": "^8.0.5",
     "tailwindcss": "^3.3.2"
   },
