--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "@reduxjs/toolkit": "^1.9.3",
+    "dotenv": "^16.4.0",
     "expo": "^49.0.22",
     "expo-location": "~16.1.0",
     "expo-status-bar": "~1.6.0",
