--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "react-native-heroicons": "^3.2.0",
     "react-native-maps": "1.7.1",
     "react-native-maps-directions": "^1.9.0",
+    "react-native-paper": "^5.12.3",
     "react-native-progress": "^5.0.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
