--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.8",
     "otp-generator": "^4.0.1",
+    "razorpay": "^2.9.2",
     "twilio": "^5.0.0-rc.1"
   },
   "author": "",
