--- a/client/package.json
+++ b/client/package.json
@@ -9,20 +9,24 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.21.0",
     "@react-native-community/geolocation": "^3.0.6",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "@reduxjs/toolkit": "^1.9.3",
     "axios": "^1.6.7",
-    "dotenv": "^16.4.0",
+    "core-js": "^3.35.1",
     "expo": "^49.0.22",
     "expo-location": "~16.1.0",
     "expo-status-bar": "~1.6.0",
+    "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "nativewind": "^2.0.11",
     "postcss": "^8.4.23",
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-animatable": "^1.3.3",
+    "react-native-dotenv": "^3.4.9",
     "react-native-elements": "^3.4.3",
     "react-native-heroicons": "^3.2.0",
     "react-native-maps": "1.7.1",
@@ -38,7 +42,9 @@
     "tailwindcss": "^3.3.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@types/core-js": "^2.5.8",
+    "@types/jsonwebtoken": "^9.0.5"
   },
   "private": true
 }
