--- a/client/package.json
+++ b/client/package.json
@@ -39,7 +39,8 @@
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.19.6",
     "react-redux": "^8.0.5",
-    "tailwindcss": "^3.3.2"
+    "tailwindcss": "^3.3.2",
+    "@expo/webpack-config": "^19.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
