--- a/server/package.json
+++ b/server/package.json
@@ -12,13 +12,16 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.2",
     "express": "^4.18.2",
+    "form-data": "^4.0.0",
     "fs": "^0.0.1-security",
+    "fs-extra": "^11.2.0",
     "https": "^1.0.0",
     "joi": "^17.12.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "multer-gridfs-storage": "^5.0.2",
     "nodemailer": "^6.9.8",
     "otp-generator": "^4.0.1",
     "razorpay": "^2.9.2",
