--- a/client/package.json
+++ b/client/package.json
@@ -18,8 +18,13 @@
     "axios": "^1.6.7",
     "core-js": "^3.35.1",
     "expo": "^49.0.22",
+    "expo-camera": "~13.4.4",
+    "expo-file-system": "~15.4.5",
+    "expo-image-picker": "~14.3.2",
     "expo-location": "~16.1.0",
+    "expo-media-library": "~15.4.1",
     "expo-status-bar": "~1.6.0",
+    "firebase": "^10.8.0",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "nativewind": "^2.0.11",
