--- a/client/package.json
+++ b/client/package.json
@@ -30,7 +30,7 @@
     "nativewind": "^2.0.11",
     "postcss": "^8.4.23",
     "react": "18.2.0",
-    "react-native": "0.72.10",
+    "react-native": "0.72.6",
     "react-native-animatable": "^1.3.3",
     "react-native-dotenv": "^3.4.9",
     "react-native-elements": "^3.4.3",
@@ -45,13 +45,13 @@
     "react-native-swiper": "^1.6.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.19.6",
-    "react-redux": "^8.0.5",
-    "tailwindcss": "^3.3.2"
+    "react-redux": "^8.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/core-js": "^2.5.8",
-    "@types/jsonwebtoken": "^9.0.5"
+    "@types/jsonwebtoken": "^9.0.5",
+    "tailwindcss": "^3.3.2"
   },
   "private": true
 }
